k8s/applications/media/arr/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: host3
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: bazarr
          image: ghcr.io/linuxserver/bazarr:1.5.1 # renovate: ghcr.io/linuxserver/bazarr
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          ports:
            - name: http
              containerPort: 6767
              protocol: TCP
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: data
              mountPath: /app/data
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
            limits:
              cpu: 1000m
              memory: 256Mi
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: data
          persistentVolumeClaim:
            claimName: media-share
        - name: tmp
          emptyDir: { }
