k8s/applications/media/arr/bazarr/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  template:
    spec:
      containers:
      - name: bazarr
        securityContext:
          allowPrivilegeEscalation: false
