k8s/applications/media/arr/bazarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
    - name: bazarr-web
      port: 80
      targetPort: http
